@@ -21,7 +21,7 @@ public class MemberAuthDTO extends User {
 
     public MemberAuthDTO(String email, String password, String name, List<String> roleNames) {
         // ROLE_ 접두사를 붙여서 권한을 부여
-        super(email, password, roleNames.stream().map(str -> new SimpleGrantedAuthority("ROLE_" + str)).collect(Collectors.toList()));
+        super(email, password, roleNames.stream().map(str -> new SimpleGrantedAuthority("ROLE_" + str)).toList());
         this.email = email;
         this.password = password;
         this.name = name;
